--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,14 @@ defaults:
       path: ""
       type: "posts"
     values:
+      layout: "post"
+      author: "Alex"
+      title: "null"
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
       layout: "default"
       author: "Alex"
+      title: "null"
