added archives, minor fixes

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ defaults:
       layout: "post"
       author: "Alex"
       title: "null"
+      archives: "active"
   -
     scope:
       path: ""
