--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
-highlighter: pygments
+# conversion
 markdown: redcarpet
+highlighter: pygments
+
+# outputting
+permalink: /:year/:month/:day/:title/
 
 defaults:
   -
