syntax hl testing

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # conversion
-#markdown: redcarpet
-#highlighter: pygments
+markdown: redcarpet
+highlighter: pygments
 
 # outputting
 permalink: /:year/:month/:day/:title/
