css/default.css: fixed q tag

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # conversion
 markdown: kramdown
 highlighter: rouge
+kramdown:
+    input: GFM
 
 # outputting
 permalink: /:year/:month/:day/:title/
